--- a/index.html
+++ b/index.html
@@ -45,15 +45,14 @@
           			
 					<ul style= " list-style: none; text-align:center; display: inline-block;">
 						<li><h3>Annihilate</h3></li>
-						<li><img src="image
-/Annihilate.png" alt="game" width="200" height="200"></li>
+						<li><img src="Annihilate.png" alt="game" width="200" height="200"></li>
 						<li>
 						<a href="game_one.html" target="_blank" style="background: #2A9D8F; text-decoration: none; padding:8px; border-radius:4px; display:inline-block; color:#F7FFF7;  " >Play Game</a>
 						</li>
 					</ul>
 	<ul style= " list-style: none; text-align:center; display: inline-block;">
 					<li><h3>Annihilate</h3></li>
-						<li><img src="image/harper_busy_day.png" alt="game" width="200" height="200"></li>
+						<li><img src="harper_busy_day.png" alt="game" width="200" height="200"></li>
 						<li>
 						<a href="harper.html" target="_blank" style="background:#2A9D8F; color:#F7FFF7; text-decoration:none; padding:8px; border-radius:4px; display:inline-block;">Play Game</a>
 						</li>
@@ -62,14 +61,14 @@
 <section>
 	<ul style= " list-style: none; text-align:center; display: inline-block;">
 						<li><h3>Annihilate</h3></li>
-						<li><img src="image/pong.png" alt="game" width="200" height="200"></li>
+						<li><img src="pong.png" alt="game" width="200" height="200"></li>
 						<li>
 						<a href="pong.html" target="_blank" style="background:#2A9D8F; color:#F7FFF7; text-decoration:none; padding:8px; border-radius:4px; display:inline-block;">Play Game</a>
 						</li>
 					</ul>
 <ul style= " list-style: none; text-align:center; display: inline-block;">
 					<li><h3>Annihilate</h3></li>
-						<li><img src="image/harper_busy_day.png" alt="game" width="200" height="200"></li>
+						<li><img src="harper_busy_day.png" alt="game" width="200" height="200"></li>
 						<li>
 						<a href="paint.html" target="_blank" style="background:#2A9D8F; color:#F7FFF7; text-decoration:none; padding:8px; border-radius:4px; display:inline-block;">Play Game</a>
 						</li>
