--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <ul style=" list-style:none; word-spacing: 20px; "> 
 <li style=" display: inline-block;"> <a href="index.html"> Home </a> </li>
-<li style=" display: inline-block;"> <a href="Hobby.html"> Hobby </a> </li> 
+<li style=" display: inline-block;"> <a href="hobby.html"> Hobby </a> </li> 
 <li style=" display: inline-block;"> <a href="Contact.html"> Contact </a> </li> 	
 </ul>
 
