--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 <!--*******************************************Nav********************************-->
-<nav style=" background: blue; padding: 1px; margin:0; ">
+<nav style=" background: blue; padding: 1px; margin:0; color: white;">
 
 
 <ul style=" list-style:none; word-spacing: 20px; "> 
