--- a/hobby.html
+++ b/hobby.html
@@ -67,10 +67,10 @@ filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#FF0000", en
   <p>Kickboxing</p>
   <p>Gaming</p>
 
-<img src="image/kick boxing.jpeg">.  
+<img src="kick boxing.jpeg">.  
 <h1>Kickboxing is a stand-up combat sport based on kicking and punching, historically developed from karate mixed with boxing. Kickboxing is practiced for self-defence, general fitness, or as a contact sport. Japanese kickboxing originated in the late 1950s, with competitions held since then. </h1>
 
-<img src="image/kick boxing 2.jpeg">. 
+<img src="kick boxing 2.jpeg">. 
   <h1>Muhammad Ali was an American professional boxer, activist, entertainer and philanthropist. Nicknamed The Greatest, he is widely regarded as one of the most significant and celebrated sporting figures of the 20th century, frequently ranked as the best heavyweight boxer and greatest athlete of the century.</h1>
 
 </section>
