--- a/hobby.html
+++ b/hobby.html
@@ -11,7 +11,22 @@
 
 
 <!--*******************************************body********************************-->
-<body style= "margin:0;">
+<body style= "margin:0;:>
+<!--*******************************************Nav********************************-->
+<nav style=" background: blue; padding: 1px; margin:0; color: white;">
+
+
+<ul style=" list-style:none; word-spacing: 20px; "> 
+<li style=" display: inline-block;"> <a href="index.html"> Home </a> </li>
+<li style=" display: inline-block;"> <a href="hobby.html"> Hobby </a> </li> 
+<li style=" display: inline-block;"> <a href="Contact.html"> Contact </a> </li> 	
+</ul>
+
+
+
+
+</nav>              
+              
 
 
 <!--*******************************************header********************************-->
