--- a/hobby.html
+++ b/hobby.html
@@ -17,9 +17,9 @@
 
 
 <ul style=" list-style:none; word-spacing: 20px; "> 
-<li style=" display: inline-block;"> <a href="index.html"> Home </a> </li>
-<li style=" display: inline-block;"> <a href="hobby.html"> Hobby </a> </li> 
-<li style=" display: inline-block;"> <a href="Contact.html"> Contact </a> </li> 	
+<li style=" display: inline-block;"> <a href="index.html" style= "color: white;"> Home </a> </li>
+<li style=" display: inline-block;"> <a href="hobby.html" style= "color: white;"> Hobby </a> </li> 
+<li style=" display: inline-block;"> <a href="Contact.html" style= "color: white;"> Contact </a> </li> 	
 </ul>
 
 
@@ -99,10 +99,10 @@ filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#FF0000", en
 
         <!-- Social media and contact links. -->
         		<ul>
-          			<li style="display:inline-block;"><a href="mailto:Mahtanishiv@gmail.com">Mahtanishiv@gmail.com</a></li>
-                 		<li style="display:inline-block;"><a href="#" target="_blank">Instagram</a></li>
+          			<li style="display:inline-block;"><a href="mailto:Mahtanishiv@gmail.com" style= "color: white;">Mahtanishiv@gmail.com</a></li>
+                 		<li style="display:inline-block;"><a href="#" target="_blank" style= "color: white;">Instagram</a></li>
           			
-          			<li style="display:inline-block;"><a href="#" target="_blank">Facebook</a></li>
+          			<li style="display:inline-block;"><a href="#" target="_blank" style= "color: white;">Facebook</a></li>
         		</ul>
         		</ul>
 
