--- a/hobby.html
+++ b/hobby.html
@@ -13,7 +13,7 @@
 <!--*******************************************body********************************-->
 <body style= "margin:0;:>
 <!--*******************************************Nav********************************-->
-<nav style=" background: blue; padding: 1px; margin:0; color: white;">
+<nav style=" background: blue; padding: 1px; margin:0; ">
 
 
 <ul style=" list-style:none; word-spacing: 20px; "> 
