--- a/hobby.html
+++ b/hobby.html
@@ -13,7 +13,8 @@
 <!--*******************************************body********************************-->
 <body style= "margin:0;:>
 <!--*******************************************Nav********************************-->
-<nav style=" background: blue; padding: 1px; margin:0; ">
+<section style="background:blue;margin:0;">              
+<nav style="padding: 1px; margin:0; ">
 
 
 <ul style=" list-style:none; word-spacing: 20px; "> 
@@ -26,7 +27,7 @@
 
 
 </nav>              
-              
+</section>              
 
 
 <!--*******************************************header********************************-->
