--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 
 <ul style=" list-style:none; word-spacing: 20px; "> 
-<li style=" display: inline-block;"> <a href="index.html"> Home </a> </li>
-<li style=" display: inline-block;"> <a href="hobby.html"> Hobby </a> </li> 
-<li style=" display: inline-block;"> <a href="Contact.html"> Contact </a> </li> 	
+<li style=" display: inline-block;"> <a href="index.html" style= "color: white;"> Home </a> </li>
+<li style=" display: inline-block;"> <a href="hobby.html" style= "color: white;"> Hobby </a> </li> 
+<li style=" display: inline-block;"> <a href="Contact.html" style= "color: white;"> Contact </a> </li> 	
 </ul>
 
 
