--- a/hobby.html
+++ b/hobby.html
@@ -32,7 +32,7 @@
 
 <!--*******************************************header********************************-->
 
-<header>
+<div>
 
 <header style=" background: hsla(0, 100%, 50%, 1);
 
