--- a/hobby.html
+++ b/hobby.html
@@ -13,28 +13,15 @@
 <!--*******************************************body********************************-->
 <body style= "margin:0;:>
 <!--*******************************************Nav********************************-->
-<section style="background:blue;margin:0;">              
-<nav style="padding: 1px; margin:0; ">
-
-
-<ul style=" list-style:none; word-spacing: 20px; "> 
-<li style=" display: inline-block;"> <a href="index.html" style= "color: white;"> Home </a> </li>
-<li style=" display: inline-block;"> <a href="hobby.html" style= "color: white;"> Hobby </a> </li> 
-<li style=" display: inline-block;"> <a href="Contact.html" style= "color: white;"> Contact </a> </li> 	
-</ul>
-
-
-
-
-</nav>              
-</section>              
+             
 
 
 <!--*******************************************header********************************-->
 
-<div>
+<div> 
+<header>
 
-<header style=" background: hsla(0, 100%, 50%, 1);
+<section style= background: hsla(0, 100%, 50%, 1);
 
 background: linear-gradient(90deg, hsla(0, 100%, 50%, 1) 0%, hsla(3, 56%, 72%, 1) 37%, hsla(4, 44%, 67%, 1) 46%, hsla(5, 37%, 64%, 1) 53%, hsla(160, 5%, 12%, 1) 87%);
 
@@ -44,16 +31,16 @@ background: -webkit-linear-gradient(90deg, hsla(0, 100%, 50%, 1) 0%, hsla(3, 56%
 
 filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#FF0000", endColorstr="#df928e", GradientType=1 );
   width: 100% ;margin: 0;"> 
-<div style= "text-align: center; margin :0; padding: 2px;"> 
+<div style= "text-align: center; margin :0; padding: 2px; color: white;"> 
 
 <h1> Shiv Mahtani </h1>
 <h2> Kickboxing </h2>
 <P> "Don't count the days, make the days count" -Muhammad Ali </p>
 
 
-</div>
+</section>
 </header> 
-
+</div> 
 
 
 
@@ -75,7 +62,7 @@ background: -webkit-linear-gradient(90deg, hsla(0, 100%, 50%, 1) 0%, hsla(3, 56%
 filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#FF0000", endColorstr="#df928e", GradientType=1 );
   width: 100% ;margin: 0;"> 
 <div style= "text-align: center; margin :0; padding: 2px;"> 
-;>
+
 
 
 
@@ -90,6 +77,7 @@ filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#FF0000", en
   <h1>Muhammad Ali was an American professional boxer, activist, entertainer and philanthropist. Nicknamed The Greatest, he is widely regarded as one of the most significant and celebrated sporting figures of the 20th century, frequently ranked as the best heavyweight boxer and greatest athlete of the century.</h1>
 
 </section>
+</div>
 </main>
 
 <!--*******************************************footer********************************-->
