--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
 
         <!-- Social media and contact links. -->
         		<ul>
-          			<li style="display:inline-block;"><a href="mailto:julesnov@gmail.com">julesnov@gmail.com</a></li>
-                 		<li style="display:inline-block;"><a href="#" target="_blank">Instagram</a></li>
+          			<li style="display:inline-block;"><a href="mailto:mahtanishiv@gmail.com" style= "color:white;">mahtanishiv@gmail.com</a></li>
+                 		<li style="display:inline-block;"><a href="#" target="_blank" style= "color:white;">Instagram</a></li>
           			
-          			<li style="display:inline-block;"><a href="#" target="_blank">Facebook</a></li>
+          			<li style="display:inline-block;"><a href="#" target="_blank" style= "color:white;">Facebook</a></li>
         		</ul>
         		</ul>
 </footer>
