--- a/hobby.html
+++ b/hobby.html
@@ -14,7 +14,19 @@
 <body style= "margin:0;:>
 <!--*******************************************Nav********************************-->
              
+<nav style=" background: blue; padding: 1px; margin:0; color: white;">
 
+
+<ul style=" list-style:none; word-spacing: 20px; "> 
+<li style=" display: inline-block;"> <a href="index.html" style= "color: white;"> Home </a> </li>
+<li style=" display: inline-block;"> <a href="hobby.html" style= "color: white;"> Hobby </a> </li> 
+<li style=" display: inline-block;"> <a href="Contact.html" style= "color: white;"> Contact </a> </li> 	
+</ul>
+
+
+
+
+</nav>
 
 <!--*******************************************header********************************-->
 
