--- a/hobby.html
+++ b/hobby.html
@@ -94,7 +94,7 @@ filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#FF0000", en
 
 <!--*******************************************footer********************************-->
 
-<footer style=" background: red;">
+<footer style=" background: red; text-align: center;">
 
 <h2 style= " margin: 0;">Let's Keep in Touch!</h2>
 
