--- a/hobby.html
+++ b/hobby.html
@@ -13,9 +13,9 @@
 <!--*******************************************body********************************-->
 <body style= "margin:0;:>
 <!--*******************************************Nav********************************-->
-             
-<nav style=" background: blue; padding: 1px; margin:0; color: white;">
-
+       <div  style ="background: black; padding: 1px; margin:0;">
+        
+<nav style=" background: black; padding: 1px; margin:0; "> 
 
 <ul style=" list-style:none; word-spacing: 20px; "> 
 <li style=" display: inline-block;"> <a href="index.html" style= "color: white;"> Home </a> </li>
@@ -27,7 +27,7 @@
 
 
 </nav>
-
+</div>
 <!--*******************************************header********************************-->
 
 <div> 
